2015-08-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/intercept_table.cpp:
	* rcsc/player/intercept_table.h:
	* rcsc/player/self_intercept_simulator.cpp:
	- InterceptInfoの要素として回転角と評価値を追加

	* rcsc/player/Makefile.am:
	- self_intercept_v13.{h,cpp}をビルドターゲットから削除

2015-07-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン番号を更新

	* rcsc/player/world_model.cpp:
	- 敵ディフェンスライン（＝オフサイドライン）の推定方法を調整．スピー
	ドにかける割合を0.4から0.1へ，最大ステップ数を5から3に変更

2015-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 敵ディフェンスライン（＝オフサイドライン）の推定方法を調整

2015-07-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 敵ディフェンスライン（＝オフサイドライン）の推定方法を調整

2015-06-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_world_model.cpp:
	* rcsc/coach/coach_world_model.h:
	- CoachWorldModelにlastSetPlayStartTime(),getSetPlayCount()を追加

2014-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- バージョン番号を更新(rc2014)

2014-07-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	- フォーメーション設定ファイルのフォーマットを変更．バー
	ジョン３以降に役割タイプ情報を追加．現在はFormationDTのみ対応．

2014-07-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	* rcsc/formation/formation_dt.cpp:
	* rcsc/formation/formation_dt.h:
	- フォーメーション設定ファイルのフォーマットバージョンを更新．バー
	ジョン３以降は各プレイヤがマーク行動を取るかどうかを指定する情報を
	追加．現在はFormationDTのみ対応．

2014-04-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_kick_to_relative.cpp:
	* rcsc/action/body_stop_dash.h:
	* rcsc/coach/coach_world_state.h:
	* rcsc/formation/formation_cdt.cpp:
	* rcsc/player/action_effector.cpp:
	* rcsc/player/player_command.h:
	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/view_grid_map.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/rcg/serializer_v5.cpp:
	- コンパイラの警告に対応
